# moncorp-rustvoice

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  compose.yml  db.sqlite
.github/workflows/: ci.yml  docker.yml
.sqlx/: query-0a6d69109aaafc0876ab2c30fa6283db097d36c09ae55e1227e2738d84b2a8fa.json  query-66d1d2c68f83263029441a600c4e4746f4964655a02a0e6b1ae3bee1f436095a.json  query-b140f2f514e585142e0e2ee4b5b3ca098148831a35c2380c648b3f6ec7ef2d9a.json
crates/bot/: Cargo.toml
crates/bot/src/: achievements.rs  activity.rs  client.rs  context_ext.rs  error.rs  ipc_server.rs  leveling.rs  lib.rs  metrics.rs  permissions.rs  time.rs
crates/bot/src/commands/: admin.rs  mod.rs  profile.rs  ranking.rs  stats.rs
crates/bot/src/commands/voice/: limit.rs  mod.rs  privacy.rs  rename.rs
crates/bot/src/events/: mod.rs  voice_state.rs  xp.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  error.rs  lib.rs  management.rs  migrator.rs  test_util.rs
crates/db/src/entities/: guild.rs  mod.rs  primary_channel.rs  temporary_channel.rs  user_achievement.rs  user_profile.rs  voice_session.rs
crates/db/src/migrations/: m00001_create_guilds.rs  m00002_create_primary_channels.rs  m00003_create_temporary_channels.rs  m00004_add_join_channel_to_temporary_channels.rs  m00005_create_user_profiles.rs  m00006_create_voice_sessions.rs  m00007_add_streak_to_user_profiles.rs  m00008_add_fk_to_voice_sessions.rs  m00009_add_channel_name_template_to_guilds.rs  m00010_create_user_achievements.rs  m00011_add_longest_session_to_user_profiles.rs  mod.rs
crates/db/src/repositories/: guild.rs  mod.rs  primary_channel.rs  temporary_channel.rs  user_achievement.rs  user_profile.rs  voice_session.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/ipc/tests/: roundtrip.rs
crates/rustvoice/: Cargo.toml
crates/rustvoice/src/: cli.rs  main.rs
crates/rustvoice/src/commands/: control.rs  daemon.rs  db.rs  invite.rs  mod.rs  register.rs  run.rs  setup.rs
migrations/: 20230709142112_create_primary_channels_table.sql  20230713155851_create_temporary_channels.sql
moncorp_rustvoice/: Cargo.toml
moncorp_rustvoice/src/: main.rs
src/: main.rs
src/commands/: auto_voice.rs  mod.rs
src/models/: mod.rs
voice_core/: Cargo.toml
voice_core/migrations/: 20240714191157_create_primary_channels_table.down.sql  20240714191157_create_primary_channels_table.up.sql  20240714191359_create_temporary_channels.up.sql
voice_core/src/: bot.rs  db.rs
voice_core/src/bot/: commands.rs
voice_core/src/bot/commands/: auto_voice.rs  utils.rs
voice_core/src/db/: models.rs
