[package]
name = "moncorp_rustvoice"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.22"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "net"] }
voice_core = { path = "../voice_core" }
