[package]
name = "bot"
version = "0.6.1"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
poise = "0.6"
db = { path = "../db" }
ipc = { path = "../ipc" }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

[features]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
