[package]
name = "db"
version = "0.4.1"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sea-orm = { version = "=1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
sea-orm-migration = { version = "=1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
async-trait = "0.1"
